force-app/main/default/objects/Bidder__c/Bidder__c.object-meta.xml
<CustomObject>
    <label>Bidder</label>
    <nameField>
        <displayFormat>Bid-{0000}</displayFormat>
        <label>Bidder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>