force-app/main/default/objects/Bidder__c/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor_Account__r</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidders (Contractor_Account__r)</relationshipLabel>
    <relationshipName>Bidders1</relationshipName>
    <type>Lookup</type>
</CustomField>