force-app/main/default/objects/Bidder__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidders</relationshipLabel>
    <relationshipName>Bidders</relationshipName>
    <type>Lookup</type>
</CustomField>